// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ic-popover-menu should render a back button when submenu-id is set: should render a back button when submenu-id is set 1`] = `
<ic-popover-menu anchor="#anchorEl" menu-aria-label="popover-menu" submenu-id="submenu">
  <mock:shadow-root>
    <div class="menu" id="ic-popover-submenu-submenu" tabindex="0">
      <div>
        <div>
          <ic-menu-button class="ic-popover-submenu-back-button" id="ic-popover-submenu-back-button" variant="default">
            <mock:shadow-root>
              <li role="menuitem">
                <ic-button aria-haspopup="menu" aria-label="Back" disabletooltip="" fullwidth="" variant="tertiary">
                  <span class="icon">
                    <slot name="icon"></slot>
                  </span>
                  <div class="menu-button-info">
                    <div class="menu-labels">
                      <ic-typography class="menu-button-label">
                        <span class="visually-hidden">
                          Go
                        </span>
                        Back
                        <span class="visually-hidden">
                          to previous menu
                        </span>
                      </ic-typography>
                    </div>
                  </div>
                </ic-button>
              </li>
            </mock:shadow-root>
            <svg fill="none" slot="icon" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
              <path d="M20 11H7.83L13.42 5.41L12 4L4 12L12 20L13.41 18.59L7.83 13H20V11Z" fill="currentColor"></path>
            </svg>
          </ic-menu-button>
          <ic-typography class="parent-label" variant="subtitle-small"></ic-typography>
        </div>
        <ul aria-controls="ic-popover-submenu-back-button" aria-label="popover-menu, within nested level 1 undefined submenu," aria-owns="ic-popover-submenu-back-button" class="button" role="menu">
          <slot></slot>
        </ul>
      </div>
    </div>
  </mock:shadow-root>
  <ic-menu-button label="Button 1" variant="default">
    <mock:shadow-root>
      <li role="menuitem">
        <ic-button aria-label="Button 1" disabletooltip="" fullwidth="" variant="tertiary">
          <div class="menu-button-info">
            <div class="menu-labels">
              <ic-typography class="menu-button-label">
                Button 1
              </ic-typography>
            </div>
          </div>
        </ic-button>
      </li>
    </mock:shadow-root>
  </ic-menu-button>
  <ic-menu-button label="Button 2" variant="default">
    <mock:shadow-root>
      <li role="menuitem">
        <ic-button aria-label="Button 2" disabletooltip="" fullwidth="" variant="tertiary">
          <div class="menu-button-info">
            <div class="menu-labels">
              <ic-typography class="menu-button-label">
                Button 2
              </ic-typography>
            </div>
          </div>
        </ic-button>
      </li>
    </mock:shadow-root>
  </ic-menu-button>
</ic-popover-menu>
`;

exports[`ic-popover-menu should render a menu button and menu group: should render a menu button and menu group 1`] = `
<ic-popover-menu anchor="#anchorEl" menu-aria-label="popover-menu">
  <mock:shadow-root>
    <div class="menu" id="ic-popover-submenu-undefined" tabindex="0">
      <div>
        <ul aria-label="popover-menu" class="button" role="menu">
          <slot></slot>
        </ul>
      </div>
    </div>
  </mock:shadow-root>
  <ic-menu-button label="Button 1" variant="default">
    <mock:shadow-root>
      <li role="menuitem">
        <ic-button aria-label="Button 1" disabletooltip="" fullwidth="" variant="tertiary">
          <div class="menu-button-info">
            <div class="menu-labels">
              <ic-typography class="menu-button-label">
                Button 1
              </ic-typography>
            </div>
          </div>
        </ic-button>
      </li>
    </mock:shadow-root>
  </ic-menu-button>
  <ic-menu-group label="Button group">
    <mock:shadow-root>
      <ic-typography variant="subtitle-small">
        Button group
      </ic-typography>
      <ul role="group">
        <slot></slot>
      </ul>
    </mock:shadow-root>
    <ic-menu-button label="Group button 1" variant="destructive">
      <mock:shadow-root>
        <li role="menuitem">
          <ic-button aria-label="Group button 1, destructive, Button group menu group" disabletooltip="" fullwidth="" variant="tertiary">
            <div class="menu-button-info">
              <div class="menu-labels">
                <ic-typography class="menu-button-label">
                  Group button 1
                </ic-typography>
              </div>
            </div>
          </ic-button>
        </li>
      </mock:shadow-root>
    </ic-menu-button>
    <ic-menu-button label="Group button 2" variant="default">
      <mock:shadow-root>
        <li role="menuitem">
          <ic-button aria-label="Group button 2, Button group menu group" disabletooltip="" fullwidth="" variant="tertiary">
            <div class="menu-button-info">
              <div class="menu-labels">
                <ic-typography class="menu-button-label">
                  Group button 2
                </ic-typography>
              </div>
            </div>
          </ic-button>
        </li>
      </mock:shadow-root>
    </ic-menu-button>
  </ic-menu-group>
</ic-popover-menu>
`;

exports[`ic-popover-menu should render when anchor starts with #: should render when target starts with # 1`] = `
<ic-popover-menu anchor="#anchorEl" menu-aria-label="popover-menu">
  <mock:shadow-root>
    <div class="menu" id="ic-popover-submenu-undefined" tabindex="0">
      <div>
        <ul aria-label="popover-menu" class="button" role="menu">
          <slot></slot>
        </ul>
      </div>
    </div>
  </mock:shadow-root>
  <ic-menu-button label="Button 1" variant="default">
    <mock:shadow-root>
      <li role="menuitem">
        <ic-button aria-label="Button 1" disabletooltip="" fullwidth="" variant="tertiary">
          <div class="menu-button-info">
            <div class="menu-labels">
              <ic-typography class="menu-button-label">
                Button 1
              </ic-typography>
            </div>
          </div>
        </ic-button>
      </li>
    </mock:shadow-root>
  </ic-menu-button>
</ic-popover-menu>
`;

exports[`ic-popover-menu should render with anchor: should render with anchor 1`] = `
<ic-popover-menu anchor="anchorEl" menu-aria-label="popover-menu">
  <mock:shadow-root>
    <div class="menu" id="ic-popover-submenu-undefined" tabindex="0">
      <div>
        <ul aria-label="popover-menu" class="button" role="menu">
          <slot></slot>
        </ul>
      </div>
    </div>
  </mock:shadow-root>
  <ic-menu-button label="Button 1" variant="default">
    <mock:shadow-root>
      <li role="menuitem">
        <ic-button aria-label="Button 1" disabletooltip="" fullwidth="" variant="tertiary">
          <div class="menu-button-info">
            <div class="menu-labels">
              <ic-typography class="menu-button-label">
                Button 1
              </ic-typography>
            </div>
          </div>
        </ic-button>
      </li>
    </mock:shadow-root>
  </ic-menu-button>
</ic-popover-menu>
`;
